# krabi-msgs

./: CMakeLists.txt  package.xml
msg/: Actuators.msg  BalloonPump.msg  Encoders.msg  MainDebug.msg  Motors.msg  MotorsCmd.msg  MotorsDistanceAsserv.msg  Obstacles.msg  OdomLight.msg  OdomLighter.msg  ServosCmd.msg  SpeedLimitations.msg  StratMovement.msg  actuators.msg  encoders.msg  main_debug.msg  motors.msg  motors_cmd.msg  motors_distance_asserv.msg  motors_parameters.msg  odom_light.msg  odom_lighter.msg  servo_cmd.msg  speed_limitations.msg  strat_movement.msg  vacuum_pump.msg
srv/: AreWeThereYet.srv  MotorsParams.srv  motorsParams.srv
